--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<lombok.version>1.18.6</lombok.version>
-		<junit.version>5.4.2</junit.version>
+<!-- 		<junit.version>5.4.2</junit.version> -->
+		<junit.version>4.12</junit.version>
 		<hibernate.version>5.4.2.Final</hibernate.version>
 		<hibernate.annotations.version>3.5.6-Final</hibernate.annotations.version>
 		<h2.version>1.4.199</h2.version>
@@ -33,8 +34,8 @@
 
 		<!-- JUNIT -->
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
