--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,9 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<lombok.version>1.18.6</lombok.version>
-<!-- 		<junit.version>5.4.2</junit.version> -->
-		<junit.version>4.12</junit.version>
-		<hibernate.version>5.4.2.Final</hibernate.version>
-		<hibernate.annotations.version>3.5.6-Final</hibernate.annotations.version>
+		<junit.version>5.4.2</junit.version>
+		<hibernate.version>5.3.7.Final</hibernate.version>
+		<jackson.version>2.9.4</jackson.version>
 		<h2.version>1.4.199</h2.version>
 	</properties>
 
@@ -34,10 +33,24 @@
 
 		<!-- JUNIT -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- JSON -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<!-- HIBERNATE -->
@@ -51,12 +64,6 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${hibernate.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>${hibernate.annotations.version}</version>
 		</dependency>
 
 		<!-- H2 DRIVER -->
