--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,26 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 
+		<!-- JAXB -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+
+
 		<!-- H2 DRIVER -->
 		<dependency>
 			<groupId>com.h2database</groupId>
