--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #hibernate.connection.driver_class=org.h2.Driver
-#hibernate.connection.url=jdbc:h2:~/e-store2
-#hibernate.connection.username=alex
-#hibernate.connection.password=pass
+#hibernate.connection.url=jdbc:h2:~/step_qa_2
+#hibernate.connection.username=julia
+#hibernate.connection.password=123456
 #hibernate.dialect=org.hibernate.dialect.H2Dialect
 #hibernate.hbm2ddl.auto=update
 ## optionaly
