--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 		<hibernate.version>5.3.7.Final</hibernate.version>
 		<jackson.version>2.9.4</jackson.version>
 		<h2.version>1.4.199</h2.version>
+		<jaxb.version>2.2.11</jaxb.version>
+
 	</properties>
 
 	<dependencies>
@@ -70,19 +72,19 @@
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>2.2.11</version>
+			<version>${jaxb.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
-			<version>2.2.11</version>
+			<version>${jaxb.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-core</artifactId>
-			<version>2.2.11</version>
+			<version>${jaxb.version}</version>
 		</dependency>
 
 
