--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
 			<version>${h2.version}</version>
 		</dependency>
 
+		<!--POSTGRES DRIVER-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.5</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
